--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="">
   </head>
   <body>
-    <div class="board-container">
+    <div class="wrapper">
+      <div class="board-container">
 
+      </div>
     </div>
   </body>
 </html>
