added difficulty modes, used variable for board sizes

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,6 +10,12 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="diff-choose">
+        <input class="diff" type="radio" name="difficulty" value="beginner"> Beginner
+        <input class="diff" type="radio" name="difficulty" value="intermediate"> Intermediate
+        <input class="diff" type="radio" name="difficulty" value="expert"> Expert
+        <button class="diff-btn">Play</button>
+      </div>
       <div class="board-container">
 
       </div>
