--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,9 +11,12 @@
   <body>
     <div class="wrapper">
       <div class="diff-choose">
-        <input class="diff" type="radio" name="difficulty" value="beginner"> Beginner
-        <input class="diff" type="radio" name="difficulty" value="intermediate"> Intermediate
-        <input class="diff" type="radio" name="difficulty" value="expert"> Expert
+          <input class="diff" type="radio" name="difficulty" value="beginner" id="beginner">
+          <label for="beginner">Beginner </label>
+          <input class="diff" type="radio" name="difficulty" value="intermediate" id="intermediate">
+          <label for="intermediate">Intermediate</label>
+          <input class="diff" type="radio" name="difficulty" value="expert" id="expert">
+          <label for="expert">Expert</label>
         <button class="diff-btn">Play</button>
       </div>
       <div class="board-container">
