added custom game functionality

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,6 +17,13 @@
           <input class="diff" type="radio" name="difficulty" value="expert" id="expert">
           <label for="expert">Expert</label>
         <button class="diff-btn">Play</button>
+          <div class="custom-size">
+              <span>Custom Size</span>
+              <input type="number" name="" id="custom-width" placeholder="Width"/>
+              <input type="number" name="" id="custom-height" placeholder="Height"/>
+              <input type="number" name="" id="bomb-number" placeholder="Bomb number"/>
+              <button class="custom-btn">Play custom game</button>
+          </div>
       </div>
       <div class="board-container">
 
